plugins {
    id 'java'
    id 'application'
}

group = 'com.promptcompiler'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
}

application {
    // Package now matches the source tree. Previously this pointed at
    // com.promptcompiler.VisualPromptApp while every source declared org.example,
    // so `./gradlew run` failed with ClassNotFoundException.
    mainClass = 'com.promptcompiler.VisualPromptApp'
}

run {
    standardInput = System.in
}